Entering and quitting from programming mode implemented. Function related to iqrf moved to iqrf.c Signed-off-by: Marek Belisko <marek.belisko@open-nandra.com>

--- a/liqrf/Makefile
+++ b/liqrf/Makefile
@@ -4,7 +4,7 @@ LDFLAGS = -lusb -lrt
 
 
 EXEC = liqrf
-OBJS = usb.o hex_parser.o spi.o liqrf.o 
+OBJS = usb.o hex_parser.o spi.o liqrf.o iqrf.o
 
 all: $(EXEC)
 
