--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "core"]
-	path = core_class
-	url = git://github.com/nandra/iqrf_class_core.git
+[submodule "iqrf_core"]
+	path = iqrf_core
+	url = git@github.com:nandra/iqrf_class_core.git
